2009-04-04  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ce-page.c
		- (get_secrets_cb): don't mix up the PolicyKit error and the error
			that could be returned from pk_helper_obtain_auth()

2009-04-04  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/polkit-helpers.c
		- (pk_helper_obtain_auth): handle NULL PolicyKit error

2009-04-04  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-wired-security.c
		- (ce_page_wired_security_new): don't connect to the "use 802.1x"
			checkbox's 'toggled' signal here, do it after setting the
			checkbox's initial value in finish_setup().  Fixes issue
			where validation would be triggered prematurely, before the
			editor was initialized
		- (finish_setup): enable_toggled() already calls ce_page_changed()

2009-04-04  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-list.c
		- Send the clicked signal to the button instead of calling do_edit()
			explicitly so that the PolKitAction's code gets run; ensures
			the same codepath gets taken for double-click as for clicking
			the edit button

2009-04-03  Dan Williams  <dcbw@redhat.com>

	* Ensure PolicyKit autorization before editing system connections, and
		request secrets from the system settings service for system connections.
		This requires splitting each CEPage subclass's *_new() method into
		two parts, the first doing minimal setup, and the second filling in
		the UI with details from the backing NMConnection.  Between the first
		and second parts, if required, secrets are requested from the system
		settings service using PolicyKit.  As a bonus, actually handle errors
		instead of dropping them on the floor.

2009-03-31  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-list.c
		- (add_connection_buttons, delete_selection_changed_cb): disable the
			delete button when the connection is read-only

2009-03-31  Dan Williams  <dcbw@redhat.com>

	* configure.ac
	  Makefile.am